# fiq

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  index.rs  index_cache.rs  main.rs  output.rs  scanner.rs
src/commands/: duplicates.rs  mod.rs  organize.rs  search.rs  stats.rs
src/mcp/: handler.rs  mod.rs  protocol.rs  server.rs  tools.rs
tests/: cli_tests.rs  mcp_tests.rs
