[package]
name = "fiq"
version = "0.1.0"
edition = "2024"
description = "Fast file intelligence CLI + MCP server"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1.10"
blake3 = { version = "1", features = ["mmap", "rayon"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
termcolor = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bincode = "1"
dirs = "5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1
